Reduce size of binaries by ~10%
- Select optimisation level per dependency (size vs perf)
- Linux: allow linker to remove unused sections (unsupported by cairo)
- Linux: x64 now requires c2010 Westmere CPU or later

--- a/linux-arm64v8/Dockerfile
+++ b/linux-arm64v8/Dockerfile
@@ -49,7 +49,7 @@ ENV \
   PLATFORM="linux-arm64v8" \
   CHOST="aarch64-linux-gnu" \
   RUST_TARGET="aarch64-unknown-linux-gnu" \
-  FLAGS="-march=armv8-a -O3 -fPIC -D_GLIBCXX_USE_CXX11_ABI=0" \
+  FLAGS="-march=armv8-a -D_GLIBCXX_USE_CXX11_ABI=0" \
   MESON="--cross-file=/root/meson.ini"
 
 COPY Toolchain.cmake /root/
