--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -38,6 +38,9 @@ jobs:
           - 'win32-arm64v8'
         experimental: [false]
         include:
+          - os: ubuntu-latest
+            platform: 'linuxmusl-arm64v8'
+            experimental: true
           - os: macos-10.15
             platform: 'darwin-x64'
             experimental: true
