--- a/linux-armv7/Dockerfile
+++ b/linux-armv7/Dockerfile
@@ -30,6 +30,7 @@ RUN \
     intltool \
     jq \
     libglib2.0-dev \
+    libssl-dev \
     libtool \
     nasm \
     ninja-build \
@@ -41,6 +42,7 @@ RUN \
     --profile minimal \
     && \
   rustup target add arm-unknown-linux-gnueabihf && \
+  cargo install cargo-c && \
   pip3 install meson==0.56.2
 
 # Compiler settings
