--- a/linux-x64/Dockerfile
+++ b/linux-x64/Dockerfile
@@ -25,15 +25,17 @@ RUN \
     gperf \
     gtk-doc \
     jq \
-    nasm \
     ninja-build \
+    openssl-devel \
     prelink \
     python3 \
     && \
+  yum install -y https://www.nasm.us/pub/nasm/releasebuilds/2.14.02/linux/nasm-2.14.02-0.fc27.x86_64.rpm && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y \
     --no-modify-path \
     --profile minimal \
     && \
+  cargo install cargo-c && \
   ln -s /usr/bin/cmake3 /usr/bin/cmake && \
   pip3 install meson==0.56.2
 
