Remove redundant exclude
This is no longer necessary after commit https://github.com/lovell/aarch64-linux-musl-crosstools/commit/3f63838c76de160b265cec5df363606314fa5117

--- a/linuxmusl-arm64v8/Dockerfile
+++ b/linuxmusl-arm64v8/Dockerfile
@@ -38,8 +38,7 @@ RUN \
     texinfo \
     && \
   apk --update --no-cache --repository https://alpine.global.ssl.fastly.net/alpine/edge/community/ add advancecomp && \
-  curl -Ls https://github.com/lovell/aarch64-linux-musl-crosstools/archive/main.tar.gz | tar -hxzC / --strip-components=2 \
-    --exclude='aarch64-linux-musl-crosstools-main/aarch64-linux-musl-cross/usr' && \
+  curl -Ls https://github.com/lovell/aarch64-linux-musl-crosstools/archive/main.tar.gz | tar -hxzC / --strip-components=2 && \
   ln -s /usr/bin/pkg-config /bin/aarch64-linux-musl-pkg-config && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y \
     --no-modify-path \
