Linux: force 'new' C++11 ABI compliance

--- a/linux-armv7/Dockerfile
+++ b/linux-armv7/Dockerfile
@@ -49,7 +49,7 @@ ENV \
   PLATFORM="linux-armv7" \
   CHOST="arm-linux-gnueabihf" \
   RUST_TARGET="arm-unknown-linux-gnueabihf" \
-  FLAGS="-marm -march=armv7-a -mfpu=neon-vfpv4 -mfloat-abi=hard -D_GLIBCXX_USE_CXX11_ABI=0" \
+  FLAGS="-marm -march=armv7-a -mfpu=neon-vfpv4 -mfloat-abi=hard" \
   MESON="--cross-file=/root/meson.ini"
 
 COPY Toolchain.cmake /root/
