--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -49,6 +49,9 @@ jobs:
     - name: Build ${{ matrix.platform }}
       id: build-release
       run: ./build.sh $(cat LIBVIPS_VERSION) ${{ matrix.platform }}
+    - name: Generate integrity checksums
+      id: integrity
+      run: ./integrity.sh
     - name: Upload Release Asset (.tar.gz)
       id: upload-release-asset-gz
       if: startsWith(github.ref, 'refs/tags/v')
@@ -70,6 +73,19 @@ jobs:
         allowUpdates: true
         artifact: libvips-*-${{ matrix.platform }}.tar.br
         artifactContentType: application/x-brotli
+        artifactErrorsFailBuild: true
+        omitBodyDuringUpdate: true
+        omitNameDuringUpdate: true
+        prerelease: true
+        token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload Release Asset (.integrity)
+      id: upload-release-asset-integrity
+      if: startsWith(github.ref, 'refs/tags/v')
+      uses: ncipollo/release-action@v1
+      with:
+        allowUpdates: true
+        artifacts: "*.integrity"
+        artifactContentType: text/plain
         artifactErrorsFailBuild: true
         omitBodyDuringUpdate: true
         omitNameDuringUpdate: true
