--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -43,7 +43,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Install dependencies (macOS)
       run: |
-        pip3 install meson==0.56.2 ninja
+        pip3 install meson ninja
         brew update
         brew install advancecomp automake brotli nasm pkg-config
       if: contains(matrix.platform, 'darwin')
