linux-arm64v8: replace cross-compilation with native build
- Uses Centos 7 with latest gcc 10 (currently 10.2.1)
- Runs on CircleCI ARM64 environment
- Workaround for rsvg not yet supporting rust nightly multi-target

--- a/linux-arm64v8/Dockerfile
+++ b/linux-arm64v8/Dockerfile
@@ -1,40 +1,33 @@
-FROM debian:bullseye
+FROM arm64v8/centos:7
 LABEL maintainer="Lovell Fuller <npm@lovell.info>"
 
-# Create Debian-based container suitable for cross-compiling Linux ARM64v8-A binaries
+# Create CentOS 7 (glibc 2.17) container suitable for building Linux ARM64v8-A binaries
 
 # Path settings
 ENV \
   RUSTUP_HOME="/usr/local/rustup" \
   CARGO_HOME="/usr/local/cargo" \
-  PATH="/usr/local/cargo/bin:$PATH"
+  PATH="/usr/local/cargo/bin:/opt/rh/devtoolset-10/root/usr/bin:$PATH"
 
 # Build dependencies
 RUN \
-  apt-get update && \
-  apt-get install -y curl && \
-  dpkg --add-architecture arm64 && \
-  apt-get update && \
-  apt-get install -y \
+  yum update -y && \
+  yum install -y epel-release centos-release-scl && \
+  yum group install -y "Development Tools" && \
+  yum install -y --setopt=tsflags=nodocs \
     advancecomp \
-    autoconf \
-    autopoint \
     brotli \
-    cmake \
-    crossbuild-essential-arm64 \
-    gettext \
-    git \
-    gobject-introspection \
+    cmake3 \
+    devtoolset-10-gcc \
+    devtoolset-10-gcc-c++ \
+    glib2-devel \
+    gobject-introspection-devel \
     gperf \
-    gtk-doc-tools \
-    intltool \
+    gtk-doc \
     jq \
-    libglib2.0-dev \
-    libtool \
     nasm \
-    ninja-build \
-    python3-pip \
-    texinfo \
+    prelink \
+    python3 \
     && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y \
     --no-modify-path \
@@ -43,7 +36,9 @@ RUN \
     && \
   rustup component add rust-src && \
   rustup target add aarch64-unknown-linux-gnu && \
-  pip3 install meson
+  ln -s /usr/bin/cmake3 /usr/bin/cmake && \
+  pip3 install --upgrade pip && \
+  pip3 install meson ninja
 
 # Rebuild the standard library of Rust to avoid collisions with system libraries.
 # See: https://github.com/lovell/sharp-libvips/issues/109
@@ -54,10 +49,8 @@ build-std-features = [\"panic_immediate_abort\"]" > $CARGO_HOME/config.toml
 
 # Compiler settings
 ENV \
-  PKG_CONFIG="/usr/bin/aarch64-linux-gnu-pkg-config" \
   PLATFORM="linux-arm64v8" \
-  CHOST="aarch64-linux-gnu" \
-  RUST_TARGET="aarch64-unknown-linux-gnu" \
+  CARGO_BUILD_TARGET="aarch64-unknown-linux-gnu" \
   FLAGS="-march=armv8-a" \
   MESON="--cross-file=/root/meson.ini"
 
