meson: move libdir option

--- a/linuxmusl-arm64v8/meson.ini
+++ b/linuxmusl-arm64v8/meson.ini
@@ -14,5 +14,5 @@ strip = '/bin/aarch64-linux-musl-strip'
 ranlib = '/bin/aarch64-linux-musl-ranlib'
 pkgconfig = '/bin/aarch64-linux-musl-pkg-config'
 
-[paths]
+[built-in options]
 libdir = 'lib'
