--- a/linux-armv6/meson.ini
+++ b/linux-armv6/meson.ini
@@ -14,5 +14,5 @@ strip = '/root/tools/x64-gcc-6.5.0/arm-rpi-linux-gnueabihf/bin/arm-rpi-linux-gnu
 pkgconfig = '/usr/bin/arm-linux-gnueabihf-pkg-config'
 ranlib = '/root/tools/x64-gcc-6.5.0/arm-rpi-linux-gnueabihf/bin/arm-rpi-linux-gnueabihf-gcc-ranlib'
 
-[paths]
+[built-in options]
 libdir = 'lib'
