--- a/linux-armv7/meson.ini
+++ b/linux-armv7/meson.ini
@@ -14,5 +14,5 @@ strip = '/usr/bin/arm-linux-gnueabihf-strip'
 pkgconfig = '/usr/bin/arm-linux-gnueabihf-pkg-config'
 ranlib = '/usr/bin/arm-linux-gnueabihf-gcc-ranlib'
 
-[paths]
+[built-in options]
 libdir = 'lib'
