Upgrade to libvips v8.13.0-rc1
Switch libvips build to meson

--- a/darwin-arm64v8/meson.ini
+++ b/darwin-arm64v8/meson.ini
@@ -9,8 +9,4 @@ c = 'clang'
 cpp = 'clang++'
 objc = 'clang'
 objcpp = 'clang++'
-ar = 'ar'
-strip = 'strip'
-
-pkg-config = 'pkg-config'
-cmake = 'cmake'
+strip = ['strip', '-x']
