Always pass the `--static` flag to pkg-config

--- a/linux-armv6/Dockerfile
+++ b/linux-armv6/Dockerfile
@@ -46,7 +46,7 @@ RUN \
 
 # Compiler settings
 ENV \
-  PKG_CONFIG="arm-linux-gnueabihf-pkg-config" \
+  PKG_CONFIG="arm-linux-gnueabihf-pkg-config --static" \
   PLATFORM="linux-armv6" \
   CHOST="arm-rpi-linux-gnueabihf" \
   RUST_TARGET="arm-unknown-linux-gnueabihf" \
