--- a/linux-armv7/meson.ini
+++ b/linux-armv7/meson.ini
@@ -12,7 +12,7 @@ nm = 'arm-linux-gnueabihf-gcc-nm'
 ld = 'arm-linux-gnueabihf-gcc-ld'
 strip = 'arm-linux-gnueabihf-strip'
 ranlib = 'arm-linux-gnueabihf-gcc-ranlib'
-pkgconfig = 'arm-linux-gnueabihf-pkg-config'
+pkgconfig = ['arm-linux-gnueabihf-pkg-config', '--static']
 
 [built-in options]
 libdir = 'lib'
