--- a/linux-x64/Dockerfile
+++ b/linux-x64/Dockerfile
@@ -39,6 +39,7 @@ RUN \
 
 # Compiler settings
 ENV \
+  PKG_CONFIG="pkg-config --static" \
   PLATFORM="linux-x64" \
   FLAGS="-march=westmere" \
   MESON="--cross-file=/root/meson.ini"
