--- a/linuxmusl-arm64v8/meson.ini
+++ b/linuxmusl-arm64v8/meson.ini
@@ -12,7 +12,7 @@ nm = 'aarch64-linux-musl-nm'
 ld = 'aarch64-linux-musl-ld'
 strip = 'aarch64-linux-musl-strip'
 ranlib = 'aarch64-linux-musl-ranlib'
-pkgconfig = 'aarch64-linux-musl-pkg-config'
+pkgconfig = ['aarch64-linux-musl-pkg-config', '--static']
 
 [built-in options]
 libdir = 'lib'
