Remove unused build dependencies

--- a/linux-armv7/Dockerfile
+++ b/linux-armv7/Dockerfile
@@ -24,17 +24,12 @@ RUN \
     crossbuild-essential-armhf \
     gettext \
     git \
-    gobject-introspection \
-    gperf \
-    gtk-doc-tools \
-    intltool \
     jq \
-    libglib2.0-dev \
     libtool \
     nasm \
     ninja-build \
+    pkg-config \
     python3-pip \
-    texinfo \
     && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y \
     --no-modify-path \
