--- a/linux-armv6/Dockerfile
+++ b/linux-armv6/Dockerfile
@@ -23,17 +23,12 @@ RUN \
     cmake \
     gettext \
     git \
-    gobject-introspection \
-    gperf \
-    gtk-doc-tools \
-    intltool \
     jq \
-    libglib2.0-dev \
     libtool \
     nasm \
     ninja-build \
+    pkg-config \
     python3-pip \
-    texinfo \
     && \
   mkdir /root/tools && \
   curl -Ls https://github.com/rvagg/rpi-newer-crosstools/archive/master.tar.gz | tar xzC /root/tools --strip-components=1 && \
