linux-arm64v8: add FIXME comment

--- a/linux-arm64v8/Dockerfile
+++ b/linux-arm64v8/Dockerfile
@@ -18,6 +18,7 @@ RUN \
     advancecomp \
     brotli \
     cmake3 \
+    # FIXME: Update to devtoolset-11, see: https://bugs.centos.org/view.php?id=18393
     devtoolset-10-gcc \
     devtoolset-10-gcc-c++ \
     glib2-devel \
