--- a/linux-armv7/meson.ini
+++ b/linux-armv7/meson.ini
@@ -5,14 +5,14 @@ cpu = 'armv7-a'
 endian = 'little'
 
 [binaries]
-c = '/usr/bin/arm-linux-gnueabihf-gcc'
-cpp = '/usr/bin/arm-linux-gnueabihf-g++'
-ar = '/usr/bin/arm-linux-gnueabihf-gcc-ar'
-nm = '/usr/bin/arm-linux-gnueabihf-gcc-nm'
-ld = '/usr/bin/arm-linux-gnueabihf-gcc-ld'
-strip = '/usr/bin/arm-linux-gnueabihf-strip'
-pkgconfig = '/usr/bin/arm-linux-gnueabihf-pkg-config'
-ranlib = '/usr/bin/arm-linux-gnueabihf-gcc-ranlib'
+c = 'arm-linux-gnueabihf-gcc'
+cpp = 'arm-linux-gnueabihf-g++'
+ar = 'arm-linux-gnueabihf-gcc-ar'
+nm = 'arm-linux-gnueabihf-gcc-nm'
+ld = 'arm-linux-gnueabihf-gcc-ld'
+strip = 'arm-linux-gnueabihf-strip'
+ranlib = 'arm-linux-gnueabihf-gcc-ranlib'
+pkgconfig = 'arm-linux-gnueabihf-pkg-config'
 
 [built-in options]
 libdir = 'lib'
