--- a/linux-armv6/meson.ini
+++ b/linux-armv6/meson.ini
@@ -5,14 +5,14 @@ cpu = 'armv6-a'
 endian = 'little'
 
 [binaries]
-c = '/root/tools/x64-gcc-6.5.0/arm-rpi-linux-gnueabihf/bin/arm-rpi-linux-gnueabihf-gcc'
-cpp = '/root/tools/x64-gcc-6.5.0/arm-rpi-linux-gnueabihf/bin/arm-rpi-linux-gnueabihf-g++'
-ar = '/root/tools/x64-gcc-6.5.0/arm-rpi-linux-gnueabihf/bin/arm-rpi-linux-gnueabihf-ar'
-nm = '/root/tools/x64-gcc-6.5.0/arm-rpi-linux-gnueabihf/bin/arm-rpi-linux-gnueabihf-gcc-nm'
-ld = '/root/tools/x64-gcc-6.5.0/arm-rpi-linux-gnueabihf/bin/arm-rpi-linux-gnueabihf-gcc-ld'
-strip = '/root/tools/x64-gcc-6.5.0/arm-rpi-linux-gnueabihf/bin/arm-rpi-linux-gnueabihf-strip'
-pkgconfig = '/usr/bin/arm-linux-gnueabihf-pkg-config'
-ranlib = '/root/tools/x64-gcc-6.5.0/arm-rpi-linux-gnueabihf/bin/arm-rpi-linux-gnueabihf-gcc-ranlib'
+c = 'arm-rpi-linux-gnueabihf-gcc'
+cpp = 'arm-rpi-linux-gnueabihf-g++'
+ar = 'arm-rpi-linux-gnueabihf-ar'
+nm = 'arm-rpi-linux-gnueabihf-gcc-nm'
+ld = 'arm-rpi-linux-gnueabihf-gcc-ld'
+strip = 'arm-rpi-linux-gnueabihf-strip'
+ranlib = 'arm-rpi-linux-gnueabihf-gcc-ranlib'
+pkgconfig = 'arm-linux-gnueabihf-pkg-config'
 
 [built-in options]
 libdir = 'lib'
