--- a/linux-x64/meson.ini
+++ b/linux-x64/meson.ini
@@ -1,6 +1,6 @@
 [binaries]
-pkgconfig = '/usr/bin/pkg-config'
-strip = '/usr/bin/strip'
+strip = 'strip'
+pkgconfig = 'pkg-config'
 
 [built-in options]
 libdir = 'lib'
