--- a/linuxmusl-arm64v8/meson.ini
+++ b/linuxmusl-arm64v8/meson.ini
@@ -5,14 +5,14 @@ cpu = 'armv8-a'
 endian = 'little'
 
 [binaries]
-c = '/bin/aarch64-linux-musl-gcc'
-cpp = '/bin/aarch64-linux-musl-g++'
-ar = '/bin/aarch64-linux-musl-ar'
-nm = '/bin/aarch64-linux-musl-nm'
-ld = '/bin/aarch64-linux-musl-ld'
-strip = '/bin/aarch64-linux-musl-strip'
-ranlib = '/bin/aarch64-linux-musl-ranlib'
-pkgconfig = '/bin/aarch64-linux-musl-pkg-config'
+c = 'aarch64-linux-musl-gcc'
+cpp = 'aarch64-linux-musl-g++'
+ar = 'aarch64-linux-musl-ar'
+nm = 'aarch64-linux-musl-nm'
+ld = 'aarch64-linux-musl-ld'
+strip = 'aarch64-linux-musl-strip'
+ranlib = 'aarch64-linux-musl-ranlib'
+pkgconfig = 'aarch64-linux-musl-pkg-config'
 
 [built-in options]
 libdir = 'lib'
