Upgrade to libvips v8.13.0-rc1 (#144)
* Switch libvips build to meson
* Always pass the `--static` flag to pkg-config
* Remove unused build dependencies

--- a/linux-arm64v8/Dockerfile
+++ b/linux-arm64v8/Dockerfile
@@ -21,13 +21,8 @@ RUN \
     # FIXME: Update to devtoolset-11, see: https://bugs.centos.org/view.php?id=18393
     devtoolset-10-gcc \
     devtoolset-10-gcc-c++ \
-    glib2-devel \
-    gobject-introspection-devel \
-    gperf \
-    gtk-doc \
     jq \
     nasm \
-    prelink \
     python3 \
     && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y \
@@ -41,6 +36,7 @@ RUN \
 
 # Compiler settings
 ENV \
+  PKG_CONFIG="pkg-config --static" \
   PLATFORM="linux-arm64v8" \
   CARGO_BUILD_TARGET="aarch64-unknown-linux-gnu" \
   FLAGS="-march=armv8-a" \
