--- a/linuxmusl-x64/Dockerfile
+++ b/linuxmusl-x64/Dockerfile
@@ -23,20 +23,14 @@ RUN \
     curl \
     findutils \
     git \
-    glib-dev \
-    gobject-introspection-dev \
-    gperf \
-    gtk-doc \
-    intltool \
     jq \
     libtool \
     linux-headers \
     nasm \
     ninja \
+    pkgconf \
     py3-pip \
     python3 \
-    shared-mime-info \
-    texinfo \
     && \
   apk --update --no-cache --repository https://alpine.global.ssl.fastly.net/alpine/edge/community/ add advancecomp && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y \
@@ -47,6 +41,7 @@ RUN \
 
 # Compiler settings
 ENV \
+  PKG_CONFIG="pkg-config --static" \
   PLATFORM="linuxmusl-x64" \
   FLAGS="-march=westmere"
 
