--- a/linux-arm64v8/Dockerfile
+++ b/linux-arm64v8/Dockerfile
@@ -40,7 +40,9 @@ ENV \
   PLATFORM="linux-arm64v8" \
   CARGO_BUILD_TARGET="aarch64-unknown-linux-gnu" \
   FLAGS="-march=armv8-a" \
-  MESON="--cross-file=/root/meson.ini"
+  MESON="--cross-file=/root/meson.ini" \
+  # https://gitlab.gnome.org/GNOME/glib/-/issues/2693
+  PYTHONIOENCODING="UTF-8"
 
 COPY Toolchain.cmake /root/
 COPY meson.ini /root/
