--- a/linux-arm64v8/Dockerfile
+++ b/linux-arm64v8/Dockerfile
@@ -21,6 +21,7 @@ RUN \
     # FIXME: Update to devtoolset-11, see: https://bugs.centos.org/view.php?id=18393
     devtoolset-10-gcc \
     devtoolset-10-gcc-c++ \
+    gperf \
     jq \
     nasm \
     python3 \
