Linux x64: align with v2 standard microarchitecture
Requires gcc 11, use equivalent-ish nehalem with gcc 9.
zlib-ng will still use PCMUL intrinsics when available at runtime
so the performance impact should be minimal.

--- a/linux-x64/Dockerfile
+++ b/linux-x64/Dockerfile
@@ -36,7 +36,7 @@ RUN \
 ENV \
   PKG_CONFIG="pkg-config --static" \
   PLATFORM="linux-x64" \
-  FLAGS="-march=westmere" \
+  FLAGS="-march=x86-64-v2 -mtune=nehalem" \
   MESON="--cross-file=/root/meson.ini"
 
 COPY Toolchain.cmake /root/
