--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -42,7 +42,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Install dependencies (macOS)
       run: |
-        pip3 install meson ninja
+        pip3 install meson!=0.63.1 ninja
         brew update
         brew install advancecomp automake brotli nasm pkg-config
       if: contains(matrix.platform, 'darwin')
