--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -39,11 +39,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Install dependencies (macOS)
+      if: runner.os == 'macOS'
       run: |
         pip3 install meson!=0.63.1 ninja
         brew update
         brew install advancecomp automake brotli nasm pkg-config
-      if: contains(matrix.platform, 'darwin')
     - name: Build ${{ matrix.platform }}
       id: build-release
       run: ./build.sh $(cat LIBVIPS_VERSION) ${{ matrix.platform }}
