win32: upgrade Docker container to Debian 11 (bullseye)
This container is used only for post-processing Windows binaries,
so we can safely bump to Debian 11 (bullseye).

The Linux ARMv7-A and ARMv6 containers still require Debian 10
(buster) to avoid a glibc version bump in the resulting binaries.

--- a/win32/Dockerfile
+++ b/win32/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:buster
+FROM debian:bullseye
 LABEL maintainer="Lovell Fuller <npm@lovell.info>"
 
 # Create Debian-based container suitable for post-processing Windows binaries
