glib: disable inotify backend for musl

--- a/linuxmusl-arm64v8/meson.ini
+++ b/linuxmusl-arm64v8/meson.ini
@@ -14,5 +14,10 @@ strip = 'aarch64-linux-musl-strip'
 ranlib = 'aarch64-linux-musl-ranlib'
 pkgconfig = ['aarch64-linux-musl-pkg-config', '--static']
 
+# Ensure we disable the inotify backend in GIO
+# See: https://gitlab.gnome.org/GNOME/glib/-/merge_requests/2991#note_1592863
+[properties]
+has_function_inotify_init1 = false
+
 [built-in options]
 libdir = 'lib'
