--- a/linuxmusl-x64/Dockerfile
+++ b/linuxmusl-x64/Dockerfile
@@ -44,7 +44,8 @@ RUN \
 ENV \
   PKG_CONFIG="pkg-config --static" \
   PLATFORM="linuxmusl-x64" \
-  FLAGS="-march=nehalem"
+  FLAGS="-march=nehalem" \
+  MESON="--cross-file=/root/meson.ini"
 
 # Musl defaults to static libs but we need them to be dynamic for host toolchain.
 # The toolchain will produce static libs by default.
@@ -52,3 +53,4 @@ ENV \
   RUSTFLAGS="-Ctarget-feature=-crt-static"
 
 COPY Toolchain.cmake /root/
+COPY meson.ini /root/
