--- a/linuxmusl-x64/meson.ini
+++ b/linuxmusl-x64/meson.ini
@@ -1,3 +1,7 @@
+[binaries]
+strip = 'strip'
+pkgconfig = ['pkg-config', '--static']
+
 # Ensure we disable the inotify backend in GIO
 # See: https://gitlab.gnome.org/GNOME/glib/-/merge_requests/2991#note_1592863
 [properties]
