linux-arm64v8: upgrade to glibc 2.26 (Amazon Linux 2)
Also:
- Remove nasm from ARM Docker images, as that is specific to x86 arch.
- Cleanup `PATH` env in linux-x64 Docker image.
- Update base images in `build.sh`.

--- a/linux-arm64v8/Dockerfile
+++ b/linux-arm64v8/Dockerfile
@@ -1,31 +1,50 @@
-FROM arm64v8/centos:7
+FROM arm64v8/amazonlinux:2
 LABEL maintainer="Lovell Fuller <npm@lovell.info>"
 
-# Create CentOS 7 (glibc 2.17) container suitable for building Linux ARM64v8-A binaries
+# Create Amazon Linux 2 (glibc 2.26) container suitable for building Linux ARM64v8-A binaries
 
 # Path settings
 ENV \
   RUSTUP_HOME="/usr/local/rustup" \
   CARGO_HOME="/usr/local/cargo" \
-  PATH="/usr/local/cargo/bin:/opt/rh/devtoolset-10/root/usr/bin:/opt/rh/rh-python38/root/usr/bin:/opt/rh/rh-python38/root/usr/local/bin:$PATH"
+  PATH="/usr/local/cargo/bin:$PATH"
 
 # Build dependencies
 RUN \
   yum update -y && \
-  yum install -y epel-release centos-release-scl && \
-  yum group install -y "Development Tools" && \
+  amazon-linux-extras install epel -y && \
   yum install -y --setopt=tsflags=nodocs \
+    --exclude=gcc \
     advancecomp \
+    autoconf \
+    automake \
     brotli \
+    bzip2 \
     cmake3 \
-    # FIXME: Update to devtoolset-11, see: https://bugs.centos.org/view.php?id=18393
-    devtoolset-10-gcc \
-    devtoolset-10-gcc-c++ \
+    curl \
+    gcc10 \
+    gcc10-binutils \
+    gcc10-c++ \
+    gettext \
+    git \
     gperf \
     jq \
-    nasm \
-    rh-python38 \
+    make \
+    patch \
+    pkgconfig \
+    python3 \
+    tar \
+    xz \
     && \
+  ln -s /usr/bin/gcc10-gcc /usr/bin/cc && \
+  ln -s /usr/bin/gcc10-g++ /usr/bin/c++ && \
+  ln -s /usr/bin/gcc10-as /usr/bin/as && \
+  ln -s /usr/bin/gcc10-ar /usr/bin/ar && \
+  ln -s /usr/bin/gcc10-nm /usr/bin/nm && \
+  ln -s /usr/bin/gcc10-ld.bfd /usr/bin/ld && \
+  ln -s /usr/bin/gcc10-strip /usr/bin/strip && \
+  ln -s /usr/bin/gcc10-ranlib /usr/bin/ranlib && \
+  ln -s /usr/bin/gcc10-readelf /usr/bin/readelf && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y \
     --no-modify-path \
     --profile minimal \
