Ensure zlib-ng is installed in `lib/`
Otherwise, it might inadvertently end up in the `lib64/` directory,
resulting in the use of zlib 1.2.11 as provided by GLib as fallback.

This issue was known to affect the linux-x64 and linuxmusl-x64
targets.

Use the built-in `wrap-mode=nofallback` option in Meson to prevent
any further regressions.

--- a/linuxmusl-x64/meson.ini
+++ b/linuxmusl-x64/meson.ini
@@ -6,3 +6,6 @@ pkgconfig = ['pkg-config', '--static']
 # See: https://gitlab.gnome.org/GNOME/glib/-/merge_requests/2991#note_1592863
 [properties]
 has_function_inotify_init1 = false
+
+[built-in options]
+wrap_mode = 'nofallback'
