--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -27,6 +27,7 @@ jobs:
           - 'linux-armv7'
           - 'linuxmusl-x64'
           - 'linuxmusl-arm64v8'
+          - 'linux-s390x'
           - 'win32-ia32'
           - 'win32-x64'
           - 'win32-arm64v8'
