--- a/platforms/win32/Dockerfile
+++ b/platforms/win32/Dockerfile
@@ -3,4 +3,4 @@ LABEL maintainer="Lovell Fuller <npm@lovell.info>"
 
 # Create Debian-based container suitable for post-processing Windows binaries
 
-RUN apt-get update && apt-get install -y advancecomp brotli curl zip
+RUN apt-get update && apt-get install -y curl zip
