Add infrastructure to build WebAssembly static libs via wasm-vips
Co-authored-by: Ingvar Stepanyan <me@rreverser.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 libvips*
 *.log
+build/wasm-vips-*
 deps/
 target/
 npm/*/*
 !npm/*/package.json
+!npm/dev-wasm32/THIRD-PARTY-NOTICES.md
 npm/img-sharp-libvips-*.tgz
