--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -28,6 +28,7 @@ jobs:
           - 'linuxmusl-x64'
           - 'linuxmusl-arm64v8'
           - 'linux-s390x'
+          - 'wasm32'
           - 'win32-ia32'
           - 'win32-x64'
           - 'win32-arm64v8'
