--- a/platforms/linux-armv6/Dockerfile
+++ b/platforms/linux-armv6/Dockerfile
@@ -26,6 +26,7 @@ RUN \
     libtool \
     ninja-build \
     pkg-config \
+    python3-packaging \
     python3-pip \
     && \
   mkdir /root/tools && \
