--- a/platforms/linux-s390x/meson.ini
+++ b/platforms/linux-s390x/meson.ini
@@ -12,7 +12,7 @@ nm = 's390x-linux-gnu-gcc-nm'
 ld = 's390x-linux-gnu-gcc-ld'
 strip = 's390x-linux-gnu-strip'
 ranlib = 's390x-linux-gnu-gcc-ranlib'
-pkgconfig = ['s390x-linux-gnu-pkg-config', '--static']
+pkg-config = ['s390x-linux-gnu-pkg-config', '--static']
 
 [built-in options]
 libdir = 'lib'
