--- a/platforms/linuxmusl-arm64v8/meson.ini
+++ b/platforms/linuxmusl-arm64v8/meson.ini
@@ -12,7 +12,7 @@ nm = 'aarch64-linux-musl-nm'
 ld = 'aarch64-linux-musl-ld'
 strip = 'aarch64-linux-musl-strip'
 ranlib = 'aarch64-linux-musl-ranlib'
-pkgconfig = ['aarch64-linux-musl-pkg-config', '--static']
+pkg-config = ['aarch64-linux-musl-pkg-config', '--static']
 
 # Ensure we disable the inotify backend in GIO
 # See: https://gitlab.gnome.org/GNOME/glib/-/merge_requests/2991#note_1592863
