--- a/platforms/linuxmusl-x64/meson.ini
+++ b/platforms/linuxmusl-x64/meson.ini
@@ -1,6 +1,6 @@
 [binaries]
 strip = 'strip'
-pkgconfig = ['pkg-config', '--static']
+pkg-config = ['pkg-config', '--static']
 
 # Ensure we disable the inotify backend in GIO
 # See: https://gitlab.gnome.org/GNOME/glib/-/merge_requests/2991#note_1592863
