--- a/platforms/linux-x64/meson.ini
+++ b/platforms/linux-x64/meson.ini
@@ -1,6 +1,6 @@
 [binaries]
 strip = 'strip'
-pkgconfig = ['pkg-config', '--static']
+pkg-config = ['pkg-config', '--static']
 
 [built-in options]
 libdir = 'lib'
